--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An atomic design based system!",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/.bin/jasmine"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
   "dependencies": {
     "fs-extra": "^0.30.0",
     "handlebars": "^4.0.5",
+    "jasmine": "^2.4.1",
     "mkdirp": "^0.5.1",
     "rimraf": "^2.5.2"
   }
