--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "fs-extra": "^0.30.0",
     "handlebars": "^4.0.5",
+    "html-escape": "^2.0.0",
     "istanbul": "^0.4.3",
     "jasmine": "^2.4.1",
     "mkdirp": "^0.5.1",
