improve path removal/creation

--- a/package.json
+++ b/package.json
@@ -24,8 +24,6 @@
     "html-escape": "^2.0.0",
     "istanbul": "^0.4.3",
     "jasmine": "^2.4.1",
-    "mkdirp": "^0.5.1",
-    "object-merge": "^2.5.1",
-    "rimraf": "^2.5.2"
+    "object-merge": "^2.5.1"
   }
 }
