--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "gulp-uglify": "^1.5.3",
     "handlebars": "^4.0.5",
     "html-escape": "^2.0.0",
-    "istanbul": "^0.4.3",
-    "jasmine": "^2.4.1",
     "mkdirp": "^0.5.1",
     "object-merge": "^2.5.1",
     "rimraf": "^2.5.2"
+  },
+  "devDependencies": {
+    "jasmine": "^2.4.1",
+    "istanbul": "^0.4.3"
   }
 }
