--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   },
   "homepage": "https://github.com/vebersol/democritus#readme",
   "dependencies": {
+    "del": "^2.2.0",
     "fs-extra": "^0.30.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
+    "gulp-load": "^0.1.1",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.1",
     "gulp-sourcemaps": "^1.6.0",
@@ -31,5 +33,8 @@
     "jasmine": "^2.4.1",
     "object-merge": "^2.5.1",
     "sort-object": "^3.0.2"
+  },
+  "devDependencies": {
+    "gulp-connect": "^4.0.0"
   }
 }
