--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gulp-sass": "^2.3.1",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.3",
+    "gulp-wrap": "^0.13.0",
     "handlebars": "^4.0.5",
     "html-escape": "^2.0.0",
     "marked": "^0.3.5",
