--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "democritus",
+  "name": "Neutron Atomic Design Tool",
   "version": "0.0.0",
   "description": "An atomic design based system!",
   "main": "index.js",
