--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.1",
     "gulp-sourcemaps": "^1.6.0",
+    "gulp-template-compile": "^1.2.0",
     "gulp-uglify": "^1.5.3",
     "gulp-wrap": "^0.13.0",
     "handlebars": "^4.0.5",
