better support for markdown files

--- a/.editorconfig
+++ b/.editorconfig
@@ -12,3 +12,8 @@ trim_trailing_whitespace = true
 
 [**.js]
 spaces_around_operators = true
+
+[**.md]
+indent_style = space
+indent_size = 2
+trim_trailing_whitespace = false
