--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "gulp-connect": "^4.0.0",
     "gulp-watch": "^4.3.6",
     "istanbul": "^0.4.3",
-    "jasmine": "^2.4.1"
+    "jasmine": "^2.4.1",
+    "js-beautify": "^1.6.4"
   }
 }
