--- a/package.json
+++ b/package.json
@@ -1,42 +1,58 @@
 {
   "name": "neutron-adt",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Neutron Atomic Design Tool",
+  "keywords": [
+	"neutron",
+	"atomic",
+	"design",
+	"tool"
+  ],
   "main": "index.js",
   "scripts": {
-    "start": "node bin/neutron run",
-    "test": "node bin/neutron run"
+	"start": "node bin/neutron run",
+	"test": "node bin/neutron run"
   },
   "repository": {
-    "type": "git",
-    "url": "git+https://github.com/vebersol/neutron.git"
+	"type": "git",
+	"url": "git+https://github.com/vebersol/neutron.git"
   },
   "author": "Vinícius Ebersol",
+  "contributors": [{
+	"name": "André Dias",
+	"url": "https://github.com/andrehNSFW"
+  }, {
+	"name": "Mateus Vahl",
+	"url": "https://github.com/mateuspv"
+  }],
   "license": "GPL-3.0",
   "bugs": {
-    "url": "https://github.com/vebersol/neutron/issues"
+	"url": "https://github.com/vebersol/neutron/issues"
   },
   "homepage": "https://github.com/vebersol/neutron#readme",
+  "engines": {
+	"node": ">=5.12.0"
+  },
   "dependencies": {
-    "browser-sync": "^2.13.0",
-    "browserify": "^14.3.0",
-    "chokidar": "^1.7.0",
-    "chokidar-cli": "^1.2.0",
-    "commander": "^2.9.0",
-    "del": "^2.2.0",
-    "fs-extra": "^0.30.0",
-    "handlebars": "^4.0.5",
-    "html-escape": "^2.0.0",
-    "js-beautify": "^1.6.4",
-    "marked": "^0.3.5",
-    "node-sass": "^4.5.2",
-    "npm-run-all": "^4.0.2",
-    "object-merge": "^2.5.1",
-    "sort-object": "^3.0.2",
-    "universal-jst": "^1.0.5"
+	"browser-sync": "^2.13.0",
+	"browserify": "^14.3.0",
+	"chokidar": "^1.7.0",
+	"chokidar-cli": "^1.2.0",
+	"commander": "^2.9.0",
+	"del": "^2.2.0",
+	"fs-extra": "^0.30.0",
+	"handlebars": "^4.0.5",
+	"html-escape": "^2.0.0",
+	"js-beautify": "^1.6.4",
+	"marked": "^0.3.5",
+	"node-sass": "^4.5.2",
+	"npm-run-all": "^4.0.2",
+	"object-merge": "^2.5.1",
+	"sort-object": "^3.0.2",
+	"universal-jst": "^1.0.5"
   },
   "bin": {
-    "neutron": "./bin/neutron"
+	"neutron": "./bin/neutron"
   },
   "devDependencies": {}
 }
