--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "handlebars": "^4.0.5",
     "html-escape": "^2.0.0",
     "js-beautify": "^1.6.4",
+    "klaw": "^1.3.1",
     "marked": "^0.3.5",
     "node-sass": "^4.5.2",
     "npm-run-all": "^4.0.2",
