--- a/.editorconfig
+++ b/.editorconfig
@@ -9,6 +9,8 @@ indent_size = 4
 insert_final_newline = true
 charset = utf-8
 trim_trailing_whitespace = true
+end_of_line = lf
+
 
 [**.js]
 spaces_around_operators = true
